# my-os

./: kernel.c  loader.s  main.c  makefile  notes2.txt  readme.md  todo
DevikaOS/: CMakeLists.txt  Todos  build.sh
DevikaOS-1.0.0/: MakeFile  readme.md
DevikaOS-1.0.0/docs/: guide.md
DevikaOS-1.0.0/test/: test.c
DevikaOS/src/: idt.c  isr.c  kernel.c  keyboard.c  screen.c  shell.c  string.c  util.c
DevikaOS/src/cdevika/include/: string.h
DevikaOS/src/include/: idt.h  io.h  isr.h  screen.h  shell.h  string.h  system.h  types.h  util.h
DevikaOS/src/kernel/: screen.c  shell.c  system.c
DevikaOS/src/kernel/include/: isr.h  keyboard.h  keyboard_scancodes.h  screen.h  shell.h  system.h  util.h
DevikaOS/src/kernel/utilities/: util.c
DevikaOS/test/: main.c
IKnowOS_EP2/: build.sh  gui.c  gui.h  kernel.asm  kernel.c
IKnowOS_EP2/include/: screen.h  string.h  system.h
IKnowOS_EP3/IKnowOS/: build.sh  kernel.c
devika/: MakeFile  build.sh  run.sh
devika/src/: kernel.asm  kernel.c
devika/test/: main.c  test.h
notes/: asm_format.asm  main.asm  resources.md  run.sh
notes/programs/: 00-hello.asm  01-print_char.asm  02-print-string-char.asm  05-important.asm
src/bootloader/: boot.s
test1/: bootloader.asm  commands  kernel.c  linker.ld
test3/: build.sh  kernel.c
test3/include/: keyboard.c  screen.c  screen.h  string.c  string.h  system.c
test6/: build.sh  kernel.asm  kernel.c
test6/include/: idt.c  kb.c  kb.h  screen.c  screen.h  string.c  system.c  system.h
tests/: boot_sect.asm  main.asm  run.sh
tmp/: main.c  tmp.c  tmp.h
(+27 files in other folders)
